refactor(monorepo): restructure packages and update naming conventions
- Add MIT LICENSE
- Rename packages/capy-native to packages/native
- Rename packages/capy-ts to packages/typescript
- Update package names to scoped format (@capy-bun/native, @capy-bun/typescript)
- Update all documentation references to reflect new folder structure
- Update build scripts and import paths for new package locations
- Change native library names (capy-native.dll → native.dll)
- Rename cache directory from capy-ts-cache to capy-bun-cache
- Add package.json to native package for consistency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "capy-bun",
-    "private": true,
-    "workspaces": ["packages/*"]
-  }
+  "name": "capy-bun",
+  "private": true,
+  "workspaces": ["packages/*"],
+  "license": "MIT"
+}
   
